# codegraph

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  demo.sh  quick_demo.sh
pi-extension/: README.md  SKILL.md  index.ts  package.json
pi-extension/tests/: integration.test.js
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  commands_impl.rs  entity_commands.rs  mod.rs  output.rs
src/config/: mod.rs  schema.rs  writer.rs
src/db/: conn.rs  entities.rs  files.rs  knowledge.rs  mod.rs  search.rs
src/ingest/: analyzer.rs  big_file.rs  github.rs  local.rs  mod.rs  scanner.rs
src/llm/: cache.rs  client.rs  mod.rs  prompt.rs
src/queue/: jobs.rs  manager.rs  mod.rs  worker.rs
tests/: db_tests.rs  entity_tests.rs  ingest_tests.rs  integration_tests.rs  search_tests.rs
