[package]
name = "codegraph"
version = "0.1.0"
edition = "2021"
authors = ["CodeGraph Team"]
description = "Local code knowledge graph engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jbutlerdev/codegraph"
readme = "README.md"
keywords = ["code", "knowledge-graph", "search", "llm"]

[lib]
name = "codegraph"
path = "src/lib.rs"

[[bin]]
name = "codegraph"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }

# Embedded KV store (for queue state)
sled = "0.34"

# HTTP client (for OpenRouter API)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }
indicatif = "0.17"
dialoguer = "0.11"
colored = "2"

# Git operations
git2 = "0.19"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"
regex = "1"

# Config
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
